--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header class="header">
-       
+      <nav class="navbar">
+        <div class="container">
+            <h1 class="logo lg-heading text-light">Travel</h1>
+                <ul class="nav-items">
+                    <li class="nav-item"><a href="./index.html">Home</a></li>
+                    <li class="nav-item"><a href="./about.html">About Us</a></li>
+                    <li class="nav-item"><a href="./contact.html">Contact Us</a></li>
+                </ul>
+        </div>
+      </nav> 
     </header>
 </body>
 </html>
