--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
                     <li class="nav-item"><a href="./contact.html">Contact Us</a></li>
                 </ul>
         </div>
-      </nav> 
+      </nav>
+      
+      <div class="header-content">
+        <h1 class="lg-heading text-light">travel the world</h1>
+        <p class="text-light">travel the world, experiance the greatness, it's the best gift given by the nature</p>
+        <a href="#" class="btn btn-primary text-red md-heading">Explore places</a>
+      </div>
     </header>
 </body>
 </html>
