--- a/index.html
+++ b/index.html
@@ -25,5 +25,35 @@
         <a href="#" class="btn btn-primary text-red md-heading">Explore places</a>
       </div>
     </header>
+
+
+    <!-- Showcase Section -->
+
+    <section class="showcase">
+        <div class="container">
+            <div class="row row1">
+                <div class="img-box">
+                    <img src="./img/showcase-photo3.jpg" alt="image description">
+                </div>
+                <div class="text-box">
+                    <h2 class="lg-heading text-black">DEGANVY, U.K</h2>
+                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aut error voluptates perspiciatis nobis, architecto exercitationem impedit maxime, modi minima itaque, expedita quas sunt dicta in autem odio nulla cumque.</p>
+                    <a href="./about.html" class="btn btn-secondary">More</a>
+                </div>
+            </div>
+
+            <div class="row row2">
+                <div class="img-box">
+                    <img src="./img/showcase-photo1.jpg" alt="image description">
+                </div>
+                <div class="text-box">
+                    <h2 class="lg-heading text-black">DESERT, EGYPT</h2>
+                    <p class="text-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae libero aut laudantium deserunt voluptas unde officia nesciunt perferendis a dolor. Magnam ipsam possimus necessitatibus, sed voluptate natus voluptatibus? Soluta, non!</p>
+                    <a href="./about.html" class="btn btn-secondary">More</a>
+                </div>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
