--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Travel Website</title>
 </head>
+
 <body>
     <header class="header">
-      <nav class="navbar">
-        <div class="container">
-            <h1 class="logo lg-heading text-light">Travel</h1>
+        <nav class="navbar">
+            <div class="container">
+                <h1 class="logo lg-heading text-light">Travel</h1>
                 <ul class="nav-items">
                     <li class="nav-item"><a href="./index.html">Home</a></li>
                     <li class="nav-item"><a href="./about.html">About Us</a></li>
                     <li class="nav-item"><a href="./contact.html">Contact Us</a></li>
                 </ul>
+            </div>
+        </nav>
+
+        <div class="header-content">
+            <h1 class="lg-heading text-light">travel the world</h1>
+            <p class="text-light">travel the world, experiance the greatness, it's the best gift given by the nature</p>
+            <a href="#" class="btn btn-primary text-red md-heading">Explore places</a>
         </div>
-      </nav>
-      
-      <div class="header-content">
-        <h1 class="lg-heading text-light">travel the world</h1>
-        <p class="text-light">travel the world, experiance the greatness, it's the best gift given by the nature</p>
-        <a href="#" class="btn btn-primary text-red md-heading">Explore places</a>
-      </div>
     </header>
 
 
@@ -37,7 +40,9 @@
                 </div>
                 <div class="text-box">
                     <h2 class="lg-heading text-black">DEGANVY, U.K</h2>
-                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aut error voluptates perspiciatis nobis, architecto exercitationem impedit maxime, modi minima itaque, expedita quas sunt dicta in autem odio nulla cumque.</p>
+                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aut error
+                        voluptates perspiciatis nobis, architecto exercitationem impedit maxime, modi minima itaque,
+                        expedita quas sunt dicta in autem odio nulla cumque.</p>
                     <a href="./about.html" class="btn btn-secondary">More</a>
                 </div>
             </div>
@@ -48,12 +53,43 @@
                 </div>
                 <div class="text-box">
                     <h2 class="lg-heading text-black">DESERT, EGYPT</h2>
-                    <p class="text-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae libero aut laudantium deserunt voluptas unde officia nesciunt perferendis a dolor. Magnam ipsam possimus necessitatibus, sed voluptate natus voluptatibus? Soluta, non!</p>
+                    <p class="text-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae libero
+                        aut laudantium deserunt voluptas unde officia nesciunt perferendis a dolor. Magnam ipsam
+                        possimus necessitatibus, sed voluptate natus voluptatibus? Soluta, non!</p>
                     <a href="./about.html" class="btn btn-secondary">More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Feature Section -->
+    <section class="features">
+        <div class="container">
+            <div class="box-wrapper">
+                <div class="box box-1">
+                    <i class="fas fa-route fa-2x text-red"></i>
+                    <h2 class="md-heading">Advanture</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque sint dolore maiores ex ad et
+                        excepturi fuga repellendus perspiciatis ab.</p>
+                </div>
+                
+                <div class="box box-2">
+                    <i class="fas fa-strikethrough fa-2x"></i>
+                    <h2 class="md-heading">Less Price</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque sint dolore maiores ex ad et
+                        excepturi fuga repellendus perspiciatis ab.</p>
+                </div>
+
+                <div class="box box-3">
+                    <i class="fas fa-user-check fa-2x text-red"></i>
+                    <h2 class="md-heading">Experiance</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque sint dolore maiores ex ad et
+                        excepturi fuga repellendus perspiciatis ab.</p>
                 </div>
             </div>
         </div>
 
     </section>
 </body>
+
 </html>
