--- a/index.html
+++ b/index.html
@@ -88,8 +88,17 @@
                 </div>
             </div>
         </div>
-
     </section>
+
+    <!-- Footer section  -->
+    <footer class="footer">
+        <div class="social-media-links">
+           <i class="fab fa-facebook fa-4x"></i> 
+           <i class="fab fa-twitter fa-4x"></i> 
+           <i class="fab fa-instagram fa-4x"></i> 
+        </div>
+        <p>World Travel &copy; 2023, All Right Reserved</p>
+    </footer>
 </body>
 
 </html>
