--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <div class="header-content">
             <h1 class="lg-heading text-light">travel the world</h1>
             <p class="text-light">travel the world, experiance the greatness, it's the best gift given by the nature</p>
-            <a href="#" class="btn btn-primary text-red md-heading">Explore places</a>
+            <a href="#explore-places" class="btn btn-primary text-red md-heading">Explore places</a>
         </div>
     </header>
 
 
     <!-- Showcase Section -->
 
-    <section class="showcase">
+    <section class="showcase" id="explore-places">
         <div class="container">
             <div class="row row1">
                 <div class="img-box">
