--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
 
         <div class="header-content">
-            <h1 class="lg-heading text-light">travel the world</h1>
+            <h1 class="lg-heading text-light main-heading">travel the world</h1>
             <p class="text-light">travel the world, experiance the greatness, it's the best gift given by the nature</p>
             <a href="#explore-places" class="btn btn-primary text-red md-heading">Explore places</a>
         </div>
